# libgraphql

./: .gitignore  Agents.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  core-parser-migration-plan.md  libgraphql-core-v1-plan.md  libgraphql-core-v2-plan.md  plan.md  sourcemap-bytespan-implementation-plan.md
crates/graphql/: Cargo.toml
crates/graphql/src/: cli.rs  command.rs  command_result.rs  main.rs  output_utils.rs
crates/graphql/src/commands/: mod.rs  validate.rs
crates/libgraphql/: Cargo.toml
crates/libgraphql-core/: Cargo.toml  plans.md  project-management.md  project-tracker.md
crates/libgraphql-core-v1/: Cargo.toml
crates/libgraphql-core-v1/src/: directive_annotation.rs  error_note.rs  lib.rs  located.rs  operation_kind.rs  schema_source_map.rs  span.rs  value.rs
crates/libgraphql-core-v1/src/names/: directive_name.rs  enum_value_name.rs  field_name.rs  fragment_name.rs  graphql_name.rs  mod.rs  type_name.rs  variable_name.rs
crates/libgraphql-core-v1/src/schema/: mod.rs  schema_build_error.rs  schema_builder.rs  schema_def.rs  schema_errors.rs  type_validation_error.rs
crates/libgraphql-core-v1/src/tests/: directive_annotation_tests.rs  located_tests.rs  mod.rs  schema_source_map_tests.rs  span_tests.rs  value_tests.rs
crates/libgraphql-core-v1/src/type_builders/: ast_helpers.rs  conversion_helpers.rs  directive_builder.rs  enum_type_builder.rs  enum_value_def_builder.rs  field_def_builder.rs  input_field_def_builder.rs  input_object_type_builder.rs  interface_type_builder.rs  into_graphql_type.rs  mod.rs  object_type_builder.rs  parameter_def_builder.rs  scalar_type_builder.rs  union_type_builder.rs
crates/libgraphql-core-v1/src/types/: deprecation_state.rs  directive_definition.rs  directive_definition_kind.rs  directive_location_kind.rs  enum_type.rs  enum_value.rs  field_definition.rs  fielded_type_data.rs  graphql_type.rs  graphql_type_kind.rs  has_fields_and_interfaces.rs  input_field.rs  input_object_type.rs  interface_type.rs  list_type_annotation.rs  mod.rs  named_type_annotation.rs  object_type.rs  parameter_definition.rs  scalar_kind.rs  scalar_type.rs  type_annotation.rs  union_type.rs
crates/libgraphql-core-v1/src/validators/: directive_definition_validator.rs  input_object_type_validator.rs  mod.rs  object_or_interface_type_validator.rs  union_type_validator.rs
crates/libgraphql-core/scripts/: generate-test-coverage-report.sh
crates/libgraphql-core/scripts/ci/: on-pull-request.gen-test-coverage-report.sh
crates/libgraphql-core/src/: ast.rs  directive_annotation.rs  directive_annotation_builder.rs  lib.rs  loc.rs  named_ref.rs  readonly_map.rs  value.rs
crates/libgraphql-core/src/operation/: executable_document_builder.rs  field_selection.rs  fragment_builder.rs  fragment_registry.rs  fragment_registry_builder.rs  fragment_spread.rs  mod.rs  mutation.rs  mutation_builder.rs  operation.rs  operation_builder.rs  operation_builder_trait.rs  operation_kind.rs  operation_trait.rs  query.rs  query_builder.rs  selection_set.rs  selection_set_builder.rs  subscription.rs  subscription_builder.rs  variable.rs
crates/libgraphql-core/src/schema/: _macro_runtime.rs  mod.rs  schema.rs  schema_builder.rs
crates/libgraphql-core/src/test/: mod.rs
crates/libgraphql-core/src/types/: deprecation_state.rs  directive.rs  enum_type.rs  enum_type_builder.rs  enum_value.rs  field.rs  graphql_type.rs  graphql_type_kind.rs  input_field.rs  input_object_type.rs  input_object_type_builder.rs  input_object_type_validator.rs  interface_type.rs  interface_type_builder.rs  list_type_annotation.rs  mod.rs  named_type_annotation.rs  object_or_interface_type_data.rs  object_or_interface_type_trait.rs  object_or_interface_type_validator.rs  object_type.rs  object_type_builder.rs  parameter.rs  scalar_type.rs  scalar_type_builder.rs  type_annotation.rs  type_builder.rs  types_map_builder.rs  union_type.rs  union_type_builder.rs  union_type_validator.rs
crates/libgraphql-macros/: Cargo.toml  plans.md  project-management.md  project-tracker.md
crates/libgraphql-macros/src/: emittable_schema.rs  graphql_parse_error.rs  graphql_schema_from_str_token_consumer.rs  graphql_schema_parser.rs  graphql_schema_parser_v2.rs  graphql_schema_token_consumer.rs  graphql_token_parser.rs  graphql_token_stream.rs  lib.rs  parse_error_converter.rs  rust_macro_graphql_token_source.rs  rust_to_graphql_token_adapter.rs  span_map.rs
crates/libgraphql-macros/src/tests/: graphql_parse_error.rs  graphql_token_parser.rs  graphql_token_stream.rs  mod.rs  parse_error_converter_tests.rs  rust_macro_graphql_token_source.rs  rust_to_graphql_token_adapter.rs  rust_to_graphql_token_tests.rs  token_source_divergence_tests.rs  token_source_parity_error_tests.rs  token_source_parity_utils.rs  (+1 more)
crates/libgraphql-parser/: .gitignore  Cargo.toml  README.graphql-native.html  README.graphql-native.md  README.hybrid.dark.html  README.hybrid.html  README.hybrid.light.html  README.hybrid.md  README.md  benchmark-optimizations.md  concept-3-showcase.html  custom-ast-plan.md  custom-cst-plan.md  plans.md  project-management.md  project-tracker.md  syntax-tree-evaluation-plan.md
crates/libgraphql-parser/assets/: design-showcase.v8.html
crates/libgraphql-parser/benches/: parse_benchmarks.rs
crates/libgraphql-parser/fuzz/: Cargo.toml
crates/libgraphql-parser/scripts/: fetch-shopify-admin-graphql-schema-fixture.sh  record-shopify-admin-graphql-schema-fixture-checksum.sh  run-benchmarks.sh  run-fuzz-tests.sh
crates/libgraphql-parser/src/: ast.rs  byte_span.rs  cook_graphql_string_error.rs  graphql_error_note.rs  graphql_error_note_kind.rs  graphql_error_notes.rs  graphql_parse_error.rs  graphql_parse_error_kind.rs  graphql_parser.rs  graphql_parser_config.rs  graphql_source_span.rs  graphql_string_parsing_error.rs  graphql_token_stream.rs  legacy_ast.rs  lib.rs  parse_result.rs  reserved_name_context.rs  source_map.rs  source_position.rs  source_span.rs  value_parsing_error.rs
crates/libgraphql/scripts/: generate-test-coverage-report.sh
crates/libgraphql/src/: file_reader.rs  lib.rs
(+551 files in other folders)
