[workspace]
resolver = "3"
members = [
  "crates/graphql",
  "crates/libgraphql",
  "crates/libgraphql-core",
  "crates/libgraphql-macros",
  "crates/libgraphql-parser",
]

[workspace.dependencies]
apollo-parser = "0.8"
anyhow = "1.0.100"
bincode = { version = "2.0.1", features = ["serde"] }
criterion = { version = "0.5", features = ["html_reports"] }
clap = { version = "4.5.51", features = ["derive"] }
graphql-parser = "0.4.0"
proptest = "1.6"
indexmap = { version = "2.10.0", features = ["serde"] }
inherent = "1.0.12"
memchr = "2.7"
log = "0.4.28"
proc-macro2 = "1.0.101"
quote = "1.0.40"
rayon = "1.10"
serde = { version = "1.0.226", features = ["derive"] }
smallvec = "1.15"
syn = "2.0.106"
thiserror = "2.0.9"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
walkdir = "2.5.0"
