[workspace]
resolver = "3"
members = [
  "crates/libgraphql",
  "crates/libgraphql-core",
  "crates/libgraphql-core-v1",
  "crates/libgraphql-macros",
  "crates/libgraphql-parser",
]

[workspace.dependencies]
apollo-parser = "0.8"
bincode = { version = "2.0.1", features = ["serde"] }
criterion = { version = "0.5", features = ["html_reports"] }
graphql-parser = "0.4.0"
proptest = "1.6"
indexmap = { version = "2.10.0", features = ["serde"] }
inherent = "1.0.12"
memchr = "2.7"
proc-macro2 = "1.0.101"
quote = "1.0.40"
rayon = "1.10"
serde = { version = "1.0.226", features = ["derive"] }
smallvec = "1.15"
syn = "2.0.106"
thiserror = "2.0.9"
