[package]
name = "libgraphql-core"
description = "Core libraries provided by the `libgraphql` crate."
documentation = "https://docs.rs/libgraphql/latest/libgraphql/"
license = "MIT"
version = "0.0.6"
edition = "2024"
repository = "https://github.com/jeffmo/libgraphql"

[dependencies]
bincode = { workspace = true }
graphql-parser = { workspace = true }
indexmap = { workspace = true }
inherent = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rayon = { workspace = true }
