[package]
name = "libgraphql-macros"
description = "Macros provided by the `libgraphql` crate at `libgraphql::macros`."
documentation = "https://docs.rs/libgraphql/latest/libgraphql/"
license = "MIT"
version = "0.0.9"
edition = "2024"
# v1.88.0 stabilized the `proc_macro::Span::{line,column,start,end}` APIs, which
# are used by `RustMacroGraphQLTokenSource`.
rust-version = "1.88.0"
repository = "https://github.com/jeffmo/libgraphql"

[lib]
proc-macro = true

[dependencies]
bincode = { workspace = true }
libgraphql-core = { path = "../libgraphql-core/", version = "0.0.7" }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
thiserror = { workspace = true } 

[dev-dependencies]
libgraphql = { path = "../libgraphql/" }
