[package]
name = "libgraphql-macros"
description = "Macros provided by the `libgraphql` crate at `libgraphql::macros`."
documentation = "https://docs.rs/libgraphql/latest/libgraphql/"
license = "MIT"
version = "0.0.10"
edition = "2024"
# v1.88.0 stabilized the `proc_macro::Span::{line,column,start,end}` APIs, which
# are used by `RustMacroGraphQLTokenSource`.
rust-version = "1.88.0"
repository = "https://github.com/jeffmo/libgraphql"

[lib]
proc-macro = true

[dependencies]
bincode = { workspace = true }
libgraphql-core = { path = "../libgraphql-core/", version = "0.0.8" }
libgraphql-parser = { path = "../libgraphql-parser", version = "0.0.5" }
proc-macro2 = { workspace = true, features = ["span-locations"] }
quote = { workspace = true }
syn = { workspace = true }
thiserror = { workspace = true } 

[dev-dependencies]
libgraphql = { path = "../libgraphql/" }
