[package]
name = "libgraphql-parser"
description = "A blazing fast, error-focused, lossless GraphQL parser for schema, executable, and mixed documents."
documentation = "https://docs.rs/libgraphql/latest/libgraphql-parser/"
license = "MIT"
version = "0.0.4"
edition = "2024"
repository = "https://github.com/jeffmo/libgraphql/tree/main/crates/libgraphql-parser"
readme = "README.md"

[dependencies]
graphql-parser.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true

[dev-dependencies]
apollo-parser.workspace = true
criterion.workspace = true

[[bench]]
name = "parse_benchmarks"
harness = false
