[package]
name = "libgraphql"
description = "A GraphQL engine for building GraphQL tools, clients, and servers."
documentation = "https://docs.rs/libgraphql/latest/libgraphql/"
license = "MIT"
version = "0.0.29"
edition = "2024"
repository = "https://github.com/jeffmo/libgraphql"
readme = "../../README.md"

[dependencies]
libgraphql-core = { path = "../libgraphql-core/", version = "0.0.3" }
libgraphql-macros = { path = "../libgraphql-macros/", version = "0.0.5", optional = true }

[features]
default = ["macros"]
macros = ["dep:libgraphql-macros"]
